Refactored evaluation function.

--- a/wildfire-detection.ipynb
+++ b/wildfire-detection.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +542,32 @@
     "\n",
     "    precision_val = precision(y_true, y_pred)\n",
     "    recall_val = recall(y_true, y_pred)\n",
-    "    return 2 * ((precision_val * recall_val) / (precision_val + recall_val + K.epsilon()))\n"
+    "    return 2 * ((precision_val * recall_val) / (precision_val + recall_val + K.epsilon()))\n",
+    "\n",
+    "### Evaluation stage ###\n",
+    "def full_eval(model_ds_dir, history, model, dataset_name, test_generator):\n",
+    "    # Plot metrics and save the history\n",
+    "    plot_history(model_ds_dir, history, model.name, dataset_name)\n",
+    "\n",
+    "    # Generate the ROC curve\n",
+    "    optimal_threshold = generate_roc_curve(model, test_generator, model_ds_dir, dataset_name)\n",
+    "\n",
+    "    # Generate the confusion matrices, using the optimal threshold and the default threshold of 0.5\n",
+    "    true_labels = test_generator.classes\n",
+    "    test_generator.reset()\n",
+    "    predicted_labels = (model.predict(test_generator) >= 0.5).astype(int).flatten()\n",
+    "    test_generator.reset()\n",
+    "    predicted_labels_optimal = (model.predict(test_generator) >= optimal_threshold).astype(int).flatten()\n",
+    "    cm = confusion_matrix(true_labels, predicted_labels)\n",
+    "    cm_optimal = confusion_matrix(true_labels, predicted_labels_optimal)\n",
+    "    plot_confusion_matrix(cm, model_ds_dir, model.name, dataset_name)\n",
+    "    plot_confusion_matrix(cm_optimal, model_ds_dir, model.name, dataset_name, optimal=True)\n",
+    "\n",
+    "    # Plot the test images with predictions\n",
+    "    plot_test_images(test_generator, model_ds_dir, dataset_name, model, 0.5)\n",
+    "    plot_test_images(test_generator, model_ds_dir, dataset_name, model, optimal_threshold, optimal=True)\n",
+    "\n",
+    "    return optimal_threshold"
    ]
   },
   {
@@ -1059,7 +1084,43 @@
       "Epoch 3/80\n",
       "\u001b[1m87/87\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m107s\u001b[0m 1s/step - accuracy: 0.8918 - auc: 0.9644 - f1_score: 0.8699 - loss: 0.2503 - precision: 0.8620 - recall: 0.8799 - val_accuracy: 0.9297 - val_auc: 0.9844 - val_f1_score: 0.9206 - val_loss: 0.1927 - val_precision: 0.9451 - val_recall: 0.8960 - learning_rate: 0.0010\n",
       "Epoch 4/80\n",
-      "\u001b[1m14/87\u001b[0m \u001b[32m━━━\u001b[0m\u001b[37m━━━━━━━━━━━━━━━━━\u001b[0m \u001b[1m38s\u001b[0m 529ms/step - accuracy: 0.8889 - auc: 0.9576 - f1_score: 0.8609 - loss: 0.2735 - precision: 0.8631 - recall: 0.8591"
+      "\u001b[1m87/87\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m52s\u001b[0m 602ms/step - accuracy: 0.8975 - auc: 0.9624 - f1_score: 0.8704 - loss: 0.2494 - precision: 0.8770 - recall: 0.8671 - val_accuracy: 0.9531 - val_auc: 0.9890 - val_f1_score: 0.9367 - val_loss: 0.1432 - val_precision: 0.9620 - val_recall: 0.9268 - learning_rate: 0.0010\n",
+      "Epoch 5/80\n",
+      "\u001b[1m87/87\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m68s\u001b[0m 783ms/step - accuracy: 0.9077 - auc: 0.9679 - f1_score: 0.8897 - loss: 0.2316 - precision: 0.8953 - recall: 0.8910 - val_accuracy: 0.9661 - val_auc: 0.9956 - val_f1_score: 0.9625 - val_loss: 0.1152 - val_precision: 0.9745 - val_recall: 0.9444 - learning_rate: 0.0010\n",
+      "Epoch 6/80\n",
+      "\u001b[1m87/87\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m103s\u001b[0m 1s/step - accuracy: 0.9126 - auc: 0.9729 - f1_score: 0.8902 - loss: 0.2095 - precision: 0.8786 - recall: 0.9070 - val_accuracy: 0.9583 - val_auc: 0.9932 - val_f1_score: 0.9467 - val_loss: 0.1280 - val_precision: 0.9655 - val_recall: 0.9272 - learning_rate: 0.0010\n",
+      "Epoch 7/80\n",
+      "\u001b[1m87/87\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m78s\u001b[0m 890ms/step - accuracy: 0.9163 - auc: 0.9756 - f1_score: 0.8963 - loss: 0.2020 - precision: 0.9114 - recall: 0.8874 - val_accuracy: 0.9635 - val_auc: 0.9968 - val_f1_score: 0.9565 - val_loss: 0.1001 - val_precision: 0.9756 - val_recall: 0.9412 - learning_rate: 0.0010\n",
+      "Epoch 8/80\n",
+      "\u001b[1m87/87\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m55s\u001b[0m 634ms/step - accuracy: 0.9119 - auc: 0.9742 - f1_score: 0.8918 - loss: 0.2059 - precision: 0.9048 - recall: 0.8853 - val_accuracy: 0.9635 - val_auc: 0.9979 - val_f1_score: 0.9565 - val_loss: 0.0973 - val_precision: 0.9799 - val_recall: 0.9299 - learning_rate: 0.0010\n",
+      "Epoch 9/80\n",
+      "\u001b[1m87/87\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m56s\u001b[0m 641ms/step - accuracy: 0.9338 - auc: 0.9835 - f1_score: 0.9187 - loss: 0.1606 - precision: 0.9288 - recall: 0.9108 - val_accuracy: 0.9740 - val_auc: 0.9966 - val_f1_score: 0.9595 - val_loss: 0.0947 - val_precision: 0.9866 - val_recall: 0.9484 - learning_rate: 0.0010\n",
+      "Epoch 10/80\n",
+      "\u001b[1m87/87\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m54s\u001b[0m 623ms/step - accuracy: 0.9438 - auc: 0.9861 - f1_score: 0.9294 - loss: 0.1482 - precision: 0.9301 - recall: 0.9335 - val_accuracy: 0.9740 - val_auc: 0.9976 - val_f1_score: 0.9668 - val_loss: 0.0910 - val_precision: 0.9863 - val_recall: 0.9474 - learning_rate: 0.0010\n",
+      "Epoch 11/80\n",
+      "\u001b[1m87/87\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m53s\u001b[0m 611ms/step - accuracy: 0.9392 - auc: 0.9848 - f1_score: 0.9249 - loss: 0.1566 - precision: 0.9232 - recall: 0.9337 - val_accuracy: 0.9922 - val_auc: 0.9997 - val_f1_score: 0.9901 - val_loss: 0.0683 - val_precision: 1.0000 - val_recall: 0.9806 - learning_rate: 0.0010\n",
+      "Epoch 12/80\n",
+      "\u001b[1m87/87\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m54s\u001b[0m 619ms/step - accuracy: 0.9477 - auc: 0.9884 - f1_score: 0.9354 - loss: 0.1364 - precision: 0.9452 - recall: 0.9258 - val_accuracy: 0.9870 - val_auc: 0.9997 - val_f1_score: 0.9839 - val_loss: 0.0597 - val_precision: 0.9886 - val_recall: 0.9830 - learning_rate: 0.0010\n",
+      "Epoch 13/80\n",
+      "\u001b[1m87/87\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m63s\u001b[0m 720ms/step - accuracy: 0.9281 - auc: 0.9826 - f1_score: 0.9084 - loss: 0.1658 - precision: 0.9110 - recall: 0.9136 - val_accuracy: 0.9844 - val_auc: 0.9991 - val_f1_score: 0.9797 - val_loss: 0.0679 - val_precision: 0.9937 - val_recall: 0.9691 - learning_rate: 0.0010\n",
+      "Epoch 14/80\n",
+      "\u001b[1m87/87\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m60s\u001b[0m 688ms/step - accuracy: 0.9366 - auc: 0.9850 - f1_score: 0.9247 - loss: 0.1578 - precision: 0.9441 - recall: 0.9062 - val_accuracy: 0.9896 - val_auc: 0.9999 - val_f1_score: 0.9878 - val_loss: 0.0522 - val_precision: 1.0000 - val_recall: 0.9750 - learning_rate: 0.0010\n",
+      "Epoch 15/80\n",
+      "\u001b[1m87/87\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m54s\u001b[0m 618ms/step - accuracy: 0.9431 - auc: 0.9870 - f1_score: 0.9295 - loss: 0.1438 - precision: 0.9407 - recall: 0.9239 - val_accuracy: 0.9870 - val_auc: 0.9998 - val_f1_score: 0.9842 - val_loss: 0.0569 - val_precision: 0.9797 - val_recall: 0.9864 - learning_rate: 0.0010\n",
+      "Epoch 16/80\n",
+      "\u001b[1m87/87\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m60s\u001b[0m 696ms/step - accuracy: 0.9549 - auc: 0.9884 - f1_score: 0.9439 - loss: 0.1343 - precision: 0.9303 - recall: 0.9615 - val_accuracy: 0.9974 - val_auc: 0.9993 - val_f1_score: 0.9969 - val_loss: 0.0401 - val_precision: 1.0000 - val_recall: 0.9932 - learning_rate: 0.0010\n",
+      "Epoch 17/80\n",
+      "\u001b[1m87/87\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m62s\u001b[0m 715ms/step - accuracy: 0.9549 - auc: 0.9918 - f1_score: 0.9470 - loss: 0.1172 - precision: 0.9513 - recall: 0.9429 - val_accuracy: 0.9974 - val_auc: 0.9999 - val_f1_score: 0.9976 - val_loss: 0.0411 - val_precision: 1.0000 - val_recall: 0.9935 - learning_rate: 0.0010\n",
+      "Epoch 18/80\n",
+      "\u001b[1m87/87\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m55s\u001b[0m 629ms/step - accuracy: 0.9498 - auc: 0.9909 - f1_score: 0.9372 - loss: 0.1212 - precision: 0.9453 - recall: 0.9339 - val_accuracy: 0.9948 - val_auc: 0.9993 - val_f1_score: 0.9933 - val_loss: 0.0403 - val_precision: 0.9937 - val_recall: 0.9937 - learning_rate: 0.0010\n",
+      "Epoch 19/80\n",
+      "\u001b[1m87/87\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m57s\u001b[0m 654ms/step - accuracy: 0.9457 - auc: 0.9899 - f1_score: 0.9312 - loss: 0.1256 - precision: 0.9294 - recall: 0.9399 - val_accuracy: 1.0000 - val_auc: 1.0000 - val_f1_score: 1.0000 - val_loss: 0.0372 - val_precision: 1.0000 - val_recall: 1.0000 - learning_rate: 0.0010\n",
+      "Epoch 20/80\n",
+      "\u001b[1m87/87\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m60s\u001b[0m 690ms/step - accuracy: 0.9552 - auc: 0.9909 - f1_score: 0.9444 - loss: 0.1178 - precision: 0.9548 - recall: 0.9371 - val_accuracy: 0.9974 - val_auc: 1.0000 - val_f1_score: 0.9969 - val_loss: 0.0408 - val_precision: 1.0000 - val_recall: 0.9937 - learning_rate: 0.0010\n",
+      "Epoch 21/80\n",
+      "\u001b[1m87/87\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m64s\u001b[0m 733ms/step - accuracy: 0.9648 - auc: 0.9927 - f1_score: 0.9558 - loss: 0.1078 - precision: 0.9541 - recall: 0.9608 - val_accuracy: 1.0000 - val_auc: 1.0000 - val_f1_score: 1.0000 - val_loss: 0.0312 - val_precision: 1.0000 - val_recall: 1.0000 - learning_rate: 0.0010\n",
+      "Epoch 22/80\n",
+      "\u001b[1m45/87\u001b[0m \u001b[32m━━━━━━━━━━\u001b[0m\u001b[37m━━━━━━━━━━\u001b[0m \u001b[1m23s\u001b[0m 565ms/step - accuracy: 0.9326 - auc: 0.9867 - f1_score: 0.9154 - loss: 0.1471 - precision: 0.9194 - recall: 0.9191"
      ]
     }
    ],
@@ -1072,7 +1133,7 @@
     "results_file = os.path.join(run_dir, 'training_results.json')\n",
     "\n",
     "for base_model in base_models:\n",
-    "    model = generate_model(base_model) # Instantiate a new model\n",
+    "    model = generate_model(base_model) # To display the model summary\n",
     "    model.summary()\n",
     "    training_results[model.name] = {}\n",
     "    plot_model(model, show_shapes=True, show_layer_names=True, to_file=os.path.join(\"architectures\", f\"{model.name}_architecture.png\"))\n",
@@ -1105,27 +1166,7 @@
     "        model.save(os.path.join(model_ds_dir, f\"{model.name}_{dataset_name}.keras\"))\n",
     "\n",
     "        ### Evaluation stage ###\n",
-    "\n",
-    "        # Plot metrics and save the history\n",
-    "        plot_history(model_ds_dir, history, model.name, dataset_name)\n",
-    "\n",
-    "        # Generate the ROC curve\n",
-    "        optimal_threshold = generate_roc_curve(model, test_generator, model_ds_dir, dataset_name)\n",
-    "        \n",
-    "        # Generate the confusion matrices, using the optimal threshold and the default threshold of 0.5\n",
-    "        true_labels = test_generator.classes\n",
-    "        test_generator.reset()\n",
-    "        predicted_labels = (model.predict(test_generator) >= 0.5).astype(int).flatten()\n",
-    "        test_generator.reset()\n",
-    "        predicted_labels_optimal = (model.predict(test_generator) >= optimal_threshold).astype(int).flatten()\n",
-    "        cm = confusion_matrix(true_labels, predicted_labels)\n",
-    "        cm_optimal = confusion_matrix(true_labels, predicted_labels_optimal)\n",
-    "        plot_confusion_matrix(cm, model_ds_dir, model.name, dataset_name)\n",
-    "        plot_confusion_matrix(cm_optimal, model_ds_dir, model.name, dataset_name, optimal=True)\n",
-    "\n",
-    "        # Plot the test images with predictions\n",
-    "        plot_test_images(test_generator, model_ds_dir, dataset_name, model, 0.5)\n",
-    "        plot_test_images(test_generator, model_ds_dir, dataset_name, model, optimal_threshold, optimal=True)\n",
+    "        optimal_threshold = full_eval(model_ds_dir, history, model, dataset_name, test_generator)\n",
     "        \n",
     "        training_results[model.name][dataset_name] = {\n",
     "            'history': history.history,\n",
@@ -1159,7 +1200,7 @@
     "consolidated_results_file = os.path.join(run_dir, 'consolidated_training_results.json')\n",
     "\n",
     "for base_model in base_models:\n",
-    "    model = generate_model(base_model) # Instantiate a new model\n",
+    "    model = generate_model(base_model) # To display the model summary\n",
     "    model.summary()\n",
     "    training_results[model.name] = {}\n",
     "    for dataset_name, train_dataset, steps_per_epoch in zip(consolidated_names, consolidated_training_datasets, consolidated_steps_per_epoch_list):\n",
@@ -1190,27 +1231,7 @@
     "        model.save(os.path.join(model_ds_dir, f\"{model.name}_{dataset_name}.keras\"))\n",
     "\n",
     "        ### Evaluation stage ###\n",
-    "\n",
-    "        # Plot metrics and save the history\n",
-    "        plot_history(model_ds_dir, history, model.name, dataset_name)\n",
-    "\n",
-    "        # Generate the ROC curve\n",
-    "        optimal_threshold = generate_roc_curve(model, test_generator, model_ds_dir, dataset_name)\n",
-    "        \n",
-    "        # Generate the confusion matrices, using the optimal threshold and the default threshold of 0.5\n",
-    "        true_labels = test_generator.classes\n",
-    "        test_generator.reset()\n",
-    "        predicted_labels = (model.predict(test_generator) >= 0.5).astype(int).flatten()\n",
-    "        test_generator.reset()\n",
-    "        predicted_labels_optimal = (model.predict(test_generator) >= optimal_threshold).astype(int).flatten()\n",
-    "        cm = confusion_matrix(true_labels, predicted_labels)\n",
-    "        cm_optimal = confusion_matrix(true_labels, predicted_labels_optimal)\n",
-    "        plot_confusion_matrix(cm, model_ds_dir, model.name, dataset_name)\n",
-    "        plot_confusion_matrix(cm_optimal, model_ds_dir, model.name, dataset_name, optimal=True)\n",
-    "\n",
-    "        # Plot the test images with predictions\n",
-    "        plot_test_images(test_generator, model_ds_dir, dataset_name, model, 0.5)\n",
-    "        plot_test_images(test_generator, model_ds_dir, dataset_name, model, optimal_threshold, optimal=True)\n",
+    "        optimal_threshold = full_eval(model_ds_dir, history, model, dataset_name, test_generator)\n",
     "        \n",
     "        consolidated_results_file[model.name][dataset_name] = {\n",
     "            'history': history.history,\n",
