--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -2,51 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['dataset_1\\\\train', 'dataset_1\\\\test', 'dataset_1\\\\val']\n",
-      "Compressing images in dataset_1\\train\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "d:\\Dissertation\\Kaggle Data\\wildfire-detection\\venv\\Lib\\site-packages\\PIL\\Image.py:3406: DecompressionBombWarning: Image size (104688771 pixels) exceeds limit of 89478485 pixels, could be decompression bomb DOS attack.\n",
-      "  warnings.warn(\n",
-      "d:\\Dissertation\\Kaggle Data\\wildfire-detection\\venv\\Lib\\site-packages\\PIL\\Image.py:3406: DecompressionBombWarning: Image size (89747104 pixels) exceeds limit of 89478485 pixels, could be decompression bomb DOS attack.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Compressing images in dataset_1\\test\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "d:\\Dissertation\\Kaggle Data\\wildfire-detection\\venv\\Lib\\site-packages\\PIL\\Image.py:3406: DecompressionBombWarning: Image size (96631920 pixels) exceeds limit of 89478485 pixels, could be decompression bomb DOS attack.\n",
-      "  warnings.warn(\n",
-      "d:\\Dissertation\\Kaggle Data\\wildfire-detection\\venv\\Lib\\site-packages\\PIL\\Image.py:3406: DecompressionBombWarning: Image size (94487082 pixels) exceeds limit of 89478485 pixels, could be decompression bomb DOS attack.\n",
-      "  warnings.warn(\n",
-      "d:\\Dissertation\\Kaggle Data\\wildfire-detection\\venv\\Lib\\site-packages\\PIL\\Image.py:3406: DecompressionBombWarning: Image size (101859328 pixels) exceeds limit of 89478485 pixels, could be decompression bomb DOS attack.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Compressing images in dataset_1\\val\n"
+      "{'The Wildfire Dataset': {'train': 'dataset_1\\\\train', 'test': 'dataset_1\\\\test', 'val': 'dataset_1\\\\val', 'augment': False, 'source_url': 'https://www.kaggle.com/datasets/elmadafri/the-wildfire-dataset/'}, 'DeepFire': {'train': 'dataset_2\\\\Training', 'test': 'dataset_2\\\\Testing', 'augment': False, 'source_url': 'https://www.kaggle.com/datasets/alik05/forest-fire-dataset/'}, 'FIRE': {'train': 'dataset_3', 'augment': False, 'source_url': 'https://www.kaggle.com/datasets/phylake1337/fire-dataset/'}}\n",
+      "['dataset_1\\\\train', 'dataset_2\\\\Training', 'dataset_3']\n",
+      "['dataset_1\\\\test', 'dataset_2\\\\Testing', None]\n",
+      "['dataset_1\\\\val', None, None]\n",
+      "[('dataset_1\\\\train', 'dataset_1\\\\test', 'dataset_1\\\\val'), ('dataset_2\\\\Training', 'dataset_2\\\\Testing', None), ('dataset_3', None, None)]\n",
+      "['dataset_3', 'https://www.kaggle.com/datasets/phylake1337/fire-dataset/']\n",
+      "Compressing images in dataset_3\n",
+      "Compressing images in https://www.kaggle.com/datasets/phylake1337/fire-dataset/\n"
      ]
     }
    ],
@@ -64,7 +34,7 @@
     "                    img.save(file_path, quality=quality, optimize=True)\n",
     "\n",
     "\n",
-    "target_dir = DATASETS['dataset_1']\n",
+    "target_dir = DATASETS['FIRE']\n",
     "directories = target_dir.values()\n",
     "directories = [d for d in directories if isinstance(d, str)]\n",
     "print(directories)\n",
