Autonomous test dataset generation, enforcing resolution and other fixes.

--- a/wildfire-detection.ipynb
+++ b/wildfire-detection.ipynb
@@ -109,11 +109,13 @@
     "import seaborn as sns\n",
     "from tensorflow.keras.utils import plot_model\n",
     "\n",
-    "from train_parameters import *\n",
-    "from customnet import *\n",
-    "from custom_metrics import *\n",
+    "from default_params import *\n",
+    "from wildfirenet import *\n",
     "\n",
-    "from IPython import get_ipython"
+    "from IPython import get_ipython\n",
+    "\n",
+    "from PIL import Image\n",
+    "from pprint import pprint"
    ]
   },
   {
@@ -194,13 +196,13 @@
     "    spec = importlib.util.spec_from_file_location(\"config_module\", config_file_path)\n",
     "    config_module = importlib.util.module_from_spec(spec)\n",
     "    spec.loader.exec_module(config_module)\n",
-    "    config = config_module.config\n",
+    "    config = config_module.cfg\n",
     "    print(\"Loaded config from Python file:\")\n",
-    "    print(config)\n",
-    "    # Dataset, model, and hyperparameters are mandatory and must be processed now.\n",
-    "    datasets_from_cfg = config.get('datasets', {})\n",
-    "    if datasets_from_cfg is None or len(datasets_from_cfg) == 0:\n",
-    "        raise ValueError(\"No datasets defined in config\")\n",
+    "    pprint(config)\n",
+    "    # Datasets, models, and hyperparameters are mandatory and must be processed now.\n",
+    "    train_from_cfg = config.get('train', {})\n",
+    "    if train_from_cfg is None or len(train_from_cfg) == 0:\n",
+    "        raise ValueError(\"No train datasets defined in config\")\n",
     "\n",
     "    models_from_cfg = config.get('keras_models', [])\n",
     "    custom_models_from_cfg = config.get('custom_models', [])\n",
@@ -209,13 +211,15 @@
     "            raise ValueError(\"No models defined in config\")\n",
     "    \n",
     "    hyperparameters = config.get('hyperparameters')\n",
+    "    default_hyperparameters = default_cfg.get('hyperparameters', {})\n",
     "    if hyperparameters is None or len(hyperparameters) == 0:\n",
     "        print(\"No training hyperparameters defined in config, using defaults\")\n",
-    "        hyperparameters = default_train_parameters.get('hyperparameters', {})\n",
-    "    for key, value in hyperparameters.items():\n",
-    "        if key not in default_train_parameters.get('hyperparameters'):\n",
-    "            print(f\"Adding default hyperparameter {key} to {value}\")\n",
-    "            hyperparameters[key] = value\n",
+    "        hyperparameters = default_hyperparameters\n",
+    "    else:\n",
+    "        for key, value in default_hyperparameters.items():\n",
+    "            if key not in hyperparameters:\n",
+    "                print(f\"Missing parameter - falling back to default hyperparameter {key}:{default_hyperparameters[key]}\")\n",
+    "                hyperparameters[key] = default_hyperparameters[key]\n",
     "    from_py = True # Successfully completed the import\n"
    ]
   },
@@ -247,13 +251,15 @@
    ],
    "source": [
     "if from_py:\n",
-    "    datasets = datasets_from_cfg\n",
+    "    training_datasets = train_from_cfg\n",
+    "    full_test_dir = config.get('test')\n",
     "else:\n",
-    "    datasets = default_train_parameters.get('datasets', {})\n",
-    "    \n",
-    "train_dirs = [datasets[ds].get('train') for ds in datasets]\n",
-    "test_dirs = [datasets[ds].get('test') for ds in datasets]\n",
-    "val_dirs = [datasets[ds].get('val') for ds in datasets]\n",
+    "    training_datasets = default_cfg.get('train', {})\n",
+    "    full_test_dir = default_cfg.get('test')\n",
+    "\n",
+    "train_dirs = [training_datasets[ds].get('train') for ds in training_datasets]\n",
+    "test_dirs = [training_datasets[ds].get('test') for ds in training_datasets]\n",
+    "val_dirs = [training_datasets[ds].get('val') for ds in training_datasets]\n",
     "\n",
     "print(train_dirs)\n",
     "print(test_dirs)\n",
@@ -263,8 +269,8 @@
     "    base_models = models_from_cfg\n",
     "    custom_models = custom_models_from_cfg\n",
     "else:\n",
-    "    base_models = default_train_parameters.get('keras_models', [])\n",
-    "    custom_models = default_train_parameters.get('custom_models', [])\n",
+    "    base_models = default_cfg.get('keras_models', [])\n",
+    "    custom_models = default_cfg.get('custom_models', [])\n",
     "\n",
     "# Combine base_models and custom_models\n",
     "all_models = base_models + custom_models\n",
@@ -324,23 +330,55 @@
     "if from_py:\n",
     "    epochs = hyperparameters.get('epochs')\n",
     "    batch_size = hyperparameters.get('batch_size')\n",
-    "    img_height = config.get('image_height', default_train_parameters.get('image_height'))\n",
-    "    img_width = config.get('image_width', default_train_parameters.get('image_width'))\n",
-    "    optimizer_fn = config.get('optimizer', default_train_parameters.get('optimizer'))\n",
-    "    loss_fn = config.get('loss', default_train_parameters.get('loss'))\n",
-    "    callbacks_list = config.get('callbacks', default_train_parameters.get('callbacks'))\n",
-    "    metrics_list = config.get('metrics', default_train_parameters.get('metrics'))\n",
+    "    img_height = config.get('image_height', default_cfg.get('image_height'))\n",
+    "    img_width = config.get('image_width', default_cfg.get('image_width'))\n",
+    "    optimizer_fn = config.get('optimizer', default_cfg.get('optimizer'))\n",
+    "    loss_fn = config.get('loss', default_cfg.get('loss'))\n",
+    "    callbacks_list = config.get('callbacks', default_cfg.get('callbacks'))\n",
+    "    metrics_list = config.get('metrics', default_cfg.get('metrics'))\n",
+    "    enforce_image_size = config.get('enforce_resolution', default_cfg.get('enforce_resolution'))\n",
     "else:\n",
-    "    epochs = default_train_parameters.get('hyperparameters').get('epochs')\n",
-    "    batch_size = default_train_parameters.get('hyperparameters').get('batch_size')\n",
-    "    img_height = default_train_parameters.get('image_height')\n",
-    "    img_width = default_train_parameters.get('image_width')\n",
-    "    optimizer_fn = default_train_parameters.get('optimizer')\n",
-    "    loss_fn = default_train_parameters.get('loss')\n",
-    "    callbacks_list = default_train_parameters.get('callbacks')\n",
-    "    metrics_list = default_train_parameters.get('metrics')\n",
+    "    epochs = hyperparameters.get('epochs')\n",
+    "    batch_size = hyperparameters.get('batch_size')\n",
+    "    img_height = default_cfg.get('image_height')\n",
+    "    img_width = default_cfg.get('image_width')\n",
+    "    optimizer_fn = default_cfg.get('optimizer')\n",
+    "    loss_fn = default_cfg.get('loss')\n",
+    "    callbacks_list = default_cfg.get('callbacks')\n",
+    "    metrics_list = default_cfg.get('metrics')\n",
+    "    enforce_image_size = default_cfg.get('enforce_resolution')\n",
     "\n",
     "checkpoint_path = os.path.join(\"checkpoint\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Enforce defined resolution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def resize_and_compress_images(root_dir, target_size=(224, 224), quality=90):\n",
+    "    for subdir, _, files in os.walk(root_dir):\n",
+    "        for file in files:\n",
+    "            if file.lower().endswith(('png', 'jpg', 'jpeg')):\n",
+    "                file_path = os.path.join(subdir, file)\n",
+    "                with Image.open(file_path) as img:\n",
+    "                    img = img.resize(target_size, Image.LANCZOS)\n",
+    "                    img.save(file_path, quality=quality, optimize=True)\n",
+    "\n",
+    "if enforce_image_size:\n",
+    "    all_dirs = train_dirs + test_dirs + val_dirs + [full_test_dir]\n",
+    "    all_dirs = [d for d in all_dirs if d is not None]\n",
+    "    for directory in all_dirs:\n",
+    "        print(f\"Adjusting resolutions of images in {directory}\")\n",
+    "        resize_and_compress_images(directory, target_size=(img_width, img_height))"
    ]
   },
   {
@@ -781,25 +819,26 @@
     "val_sizes = [] # [ (dataset_1_val_size, dataset_2_val_size), ... ]\n",
     "\n",
     "\n",
-    "for d in datasets:\n",
+    "for d in training_datasets:\n",
     "    print(f\"Processing: {d}\")\n",
-    "    train_dir = datasets[d]['train']\n",
-    "    augment = datasets[d].get('augment', True)\n",
+    "    train_dir = training_datasets[d].get('train')\n",
+    "    augment = training_datasets[d].get('augment', True)\n",
     "    print(\"Augmenting\" if augment else \"Not augmenting\", d)\n",
     "    # Apply original and augmented data generators for training\n",
     "    print(\"Creating generators for training\")\n",
-    "    train_generator, augmented_train_generator = create_generators(train_dir, augment=augment)\n",
+    "    train_generator, augmented_train_generator = create_generators(train_dir, augment=augment, img_width=img_width, img_height=img_height)\n",
     "    train_samples = samples_from_generators([train_generator, augmented_train_generator])  \n",
     "    train_dataset = generators_to_dataset([train_generator, augmented_train_generator], batch_size=batch_size)\n",
     "    \n",
     "    # Apply original and augmented data generators for validation\n",
-    "    if \"val\" in datasets[d]:\n",
-    "        val_dir = datasets[d]['val']\n",
+    "    if \"val\" in training_datasets[d]:\n",
+    "        val_dir = training_datasets[d]['val']\n",
     "        print(\"Creating generators for validation\")\n",
-    "        val_generator, augmented_val_generator = create_generators(val_dir, augment=augment, shuffle=False)\n",
+    "        val_generator, augmented_val_generator = create_generators(val_dir, augment=augment, shuffle=False, img_width=img_width, img_height=img_height)\n",
     "        val_samples = samples_from_generators([val_generator, augmented_val_generator])\n",
     "        val_dataset = generators_to_dataset([train_generator, augmented_train_generator], batch_size=batch_size)\n",
     "    else:\n",
+    "        print(\"No validation set, splitting training set.\")\n",
     "        train_dataset, val_dataset, train_samples, val_samples = val_split(train_dataset, train_samples)\n",
     "        val_generator, augmented_val_generator = None, None\n",
     "    \n",
@@ -966,17 +1005,34 @@
     }
    ],
    "source": [
+    "if full_test_dir is None:\n",
+    "    test_generators = []\n",
+    "    print(\"No target test directory provided, merging all tests from provided datasets if available\")\n",
+    "    for d in test_dirs:\n",
+    "        if d is not None:\n",
+    "            test_generators.append(create_generators(d, augment=False, shuffle=False, img_height=img_height, img_width=img_width, batch_size=batch_size)[0]) # No augmentation/shuffle for testing\n",
+    "    if len(test_generators) == 0:\n",
+    "        raise ValueError(\"No tests found in the provided datasets\")\n",
+    "    test_dataset = generators_to_dataset(test_generators, batch_size=batch_size)\n",
+    "    test_steps = sum([gen.samples for gen in test_generators]) // batch_size\n",
+    "    print(\"Test Dataset Class Counts:\")\n",
+    "    for gen in test_generators:\n",
+    "        print(\"Class indices:\", gen.class_indices)\n",
+    "        for class_name, class_index in gen.class_indices.items():\n",
+    "            print(f\"{class_name}: {sum(gen.classes == class_index)}\")\n",
+    "    print(\"\\n\")\n",
+    "    \n",
+    "else:\n",
+    "    test_generator, augmented_test_generator = create_generators(full_test_dir, augment=False, shuffle=False, img_height=img_height, img_width=img_width, batch_size=batch_size) # No augmentation/shuffle for testing\n",
+    "    test_dataset = create_dataset(test_generator, batch_size=batch_size)\n",
+    "    test_steps = test_generator.samples // batch_size\n",
     "\n",
-    "test_dir = \"test_combined\"\n",
-    "test_generator, augmented_test_generator = create_generators(test_dir, augment=False, shuffle=False) # No augmentation for testing\n",
-    "test_dataset = create_dataset(test_generator)\n",
-    "\n",
-    "print(\"Class indices:\", test_generator.class_indices)\n",
-    "print(\"\\n\")\n",
-    "print(\"Test Dataset Class Counts:\")\n",
-    "for class_name, class_index in test_generator.class_indices.items():\n",
-    "    print(f\"{class_name}: {sum(test_generator.classes == class_index)}\")\n",
-    "print(\"\\n\")"
+    "    print(\"Class indices:\", test_generator.class_indices)\n",
+    "    print(\"\\n\")\n",
+    "    print(\"Test Dataset Class Counts:\")\n",
+    "    for class_name, class_index in test_generator.class_indices.items():\n",
+    "        print(f\"{class_name}: {sum(test_generator.classes == class_index)}\")\n",
+    "    print(\"\\n\")"
    ]
   },
   {
@@ -2916,7 +2972,7 @@
     "            'optimal_threshold': float(optimal_threshold),\n",
     "            'train_dataset_size': steps_per_epoch * batch_size,\n",
     "            'val_dataset_size': validation_steps * batch_size,\n",
-    "            \"evaluation\": model.evaluate(test_dataset, return_dict=True, steps=test_generator.samples // batch_size)\n",
+    "            \"evaluation\": model.evaluate(test_dataset, return_dict=True, steps=test_steps)\n",
     "        }\n",
     "        \n",
     "        print(training_results)\n",
@@ -3029,7 +3085,7 @@
    "source": [
     "from pprint import pprint\n",
     "pprint(history.history)\n",
-    "print(model.evaluate(test_dataset, return_dict=True, steps=test_generator.samples // batch_size))"
+    "print(model.evaluate(test_dataset, return_dict=True, steps=test_steps))"
    ]
   }
  ],
@@ -3064,7 +3120,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
